recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:17: error: not enough arguments for method snowSquare: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
snowSquare(levels/3);
          ^